# eagle-markdown

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  test.md  vite.config.ts
.github/workflows/: release.yml
assets/brand/: eagle-markdown-ascii.txt
docs/: index.html  release-macos.md
examples/: eagle-markdown-demo.md
scripts/: generate_brand_assets.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
