[package]
name = "eagle-markdown"
version = "0.1.3"
edition = "2021"
description = "A fast, native Markdown viewer"

[lib]
name = "eagle_markdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
pulldown-cmark = "0.12"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
